server: working on reset password

--- a/server/config.env
+++ b/server/config.env
@@ -3,3 +3,6 @@ MONGO_URI=mongodb+srv://devryanhere_db_user:bgPDgdhYZmfUcaJe@practice.gly2whj.mo
 
 JWT_SECRET_KEY="mySuperSecretJWTKey"
 JWT_REFRESHTOKEN_KEY="mySuperSecretRefreshTokenJWTKey"
+
+GMAIL_ADDRESS="dev.ryan.here@gmail.com"
+GMAIL_PASSWORD="vire lcou tuoa drga"
