--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^25.2.0",
+    "@types/nodemailer": "^7.0.9",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
@@ -29,6 +30,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "nodemailer": "^8.0.1"
   }
 }
